--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
   },
   "dependencies": {
     "babel-core": "^5.8.22",
-    "functify": "^0.2.6"
+    "functify": "^0.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-loader": "^5.3.2",
+    "webpack": "^1.12.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack -w"
   },
   "repository": {
     "type": "git",
