--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "babel-loader": "^5.3.2",
+    "json-loader": "^0.5.3",
     "webpack": "^1.12.2"
   },
   "scripts": {
