--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "devDependencies": {
     "babel-loader": "^5.3.2",
     "json-loader": "^0.5.3",
+    "mocha": "^2.3.4",
     "webpack": "^1.12.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-core/register test",
     "build": "webpack",
     "watch": "webpack -w"
   },
