--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "webpack": "^1.12.2"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register test",
+    "test": "mocha -w --compilers js:babel-core/register test",
     "build": "webpack",
     "watch": "webpack -w"
   },
