--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "babel-core": "^5.8.22",
-    "functify": "^0.3.0"
+    "functify": "^0.3.0",
+    "react-dom": "^0.14.3"
   },
   "devDependencies": {
     "babel-loader": "^5.3.2",
     "json-loader": "^0.5.3",
     "mocha": "^2.3.4",
+    "react": "^0.14.3",
     "webpack": "^1.12.2"
   },
   "scripts": {
