--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "json-loader": "^0.5.3",
     "mocha": "^2.3.4",
     "react": "^0.14.3",
-    "webpack": "^1.12.2"
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1"
   },
   "scripts": {
     "test": "mocha -w --compilers js:babel-core/register test",
