--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "mocha -w --compilers js:babel-core/register test",
-    "build": "webpack",
-    "watch": "webpack -w"
+    "build": "NODE_ENV=production webpack -p --config webpack.prod.config.js"
   },
   "repository": {
     "type": "git",
