--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "test": "mocha -w --compilers js:babel-core/register test",
+    "test": "mocha --compilers js:babel-core/register test",
+    "watch": "mocha -w --compilers js:babel-core/register test",
     "build": "NODE_ENV=production webpack -p --config webpack.prod.config.js"
   },
   "repository": {
