--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "start": "node server.js",
     "test": "mocha --compilers js:babel-core/register test",
     "watch": "mocha -w --compilers js:babel-core/register test",
-    "build": "NODE_ENV=production webpack -p --config webpack.prod.config.js"
+    "build": "webpack --config webpack.prod.config.js"
   },
   "repository": {
     "type": "git",
