--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
     "test": "test"
   },
   "dependencies": {
-    "babel-core": "^5.8.22",
+    "babel-polyfill": "^6.3.14",
     "functify": "^0.3.2",
     "react-dom": "^0.14.3"
   },
   "devDependencies": {
-    "babel-loader": "^5.3.2",
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-syntax-class-properties": "^6.3.13",
+    "babel-plugin-syntax-object-rest-spread": "^6.3.13",
+    "babel-plugin-transform-class-properties": "^6.4.0",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "install": "^0.4.1",
     "json-loader": "^0.5.3",
     "mocha": "^2.3.4",
+    "npm": "^3.5.3",
     "react": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
